Correct spacing issue with custom alignment

--- a/src/components/accordion.scss
+++ b/src/components/accordion.scss
@@ -56,11 +56,11 @@
 
   /* Utility classes */
   &.custom-left {
-    margin: 0;
+    margin-left: 0;
   }
 
   &.custom-right {
-    margin: 0 0 0 auto;
+    margin-left: auto;
   }
 
   &.custom-full-w {
